Fix spacing between buttons and inputs

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -1,6 +1,6 @@
 @alInputIconWidth: 20px;
 
-.ActionLogPage {
+.ActionLogPage-header {
   .Button {
     margin: 0 2px;
 
@@ -78,7 +78,7 @@
   display: flex;
 
   > * {
-    .ActionLogPage.Button();
+    .ActionLogPage-header.Button();
   }
   .Select-caret {
     margin-right: 14px;
